--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_imagekit: ^0.0.5
   cloud_firestore :
   slidable_button: ^3.0.0+1
+  lottie: ^3.2.0
 
 dev_dependencies:
   flutter_test:
